<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/menuscreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuText"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:typeface="serif"
        android:textSize="60sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/startText"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="30sp"
        android:background="@drawable/borderbutton"
        android:onClick="startGame"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/highScoreBoardText"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="25sp"
        android:background="@drawable/borderbutton"
        android:onClick="viewHighscore"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/infoButtonText"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textSize="25sp"
        android:background="@drawable/borderbutton"
        android:onClick="showGameInfo"
        />




</RelativeLayout>