<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighscoreActivity"
    android:background="@drawable/highscorebackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="17sp"
            android:typeface="serif"
            android:textColor="@color/white"
            android:drawableStart="@drawable/backarrow"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:text="@string/back_to_start_menu"
            android:onClick="backToStartMenu"
            android:textAllCaps="false"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/highscoresTitle"
        android:layout_marginTop="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rankList"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/rankHighscore"
            android:textSize="25sp"
            android:background="@drawable/borderbuttonblack"
            android:textStyle="bold"
                android:textColor="@color/white"
            android:typeface="serif"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NameList"
            android:orientation="vertical"
            android:layout_weight="4" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/usernameHighscore"
                android:background="@drawable/borderbuttonblack"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:typeface="serif"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreList"
        android:orientation="vertical"
        android:layout_weight="4" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/scoreHighscore"
                android:background="@drawable/borderbuttonblack"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:typeface="serif"/>
        </LinearLayout>


    </LinearLayout>

    </LinearLayout>

</ScrollView>